Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82993

HTML dropdown options hidden when Qt.WindowStaysOnTopHint - Regression 5.13.1 -> 5.14.1

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.15.0 Beta3
    • 5.14.1, 5.15
    • WebEngine
    • None
    • macOS, Windows
    • 1390979a6f0a8469642bc294e4647470575016c4 (qt/qtwebengine/5.15)

      We're seeing this issue on macOS Catalina and Windows 10. We only have these environments for reproducing the bug; we don't suggest the bug is limited to these environments.

      Using `Qt.WindowStaysOnTopHint` causes HTML select drop downs to no longer render. Omitting the window flag causes the select to render as normal.

      I've reproduced the issue using the `Qt5.14.1/Examples/Qt-5.14.1/webengine/minimal/` project. The full project is attached as are video examples of the issue.

      Any workarounds ahead of a 5.14.x revision are very appreciated. This bug has blindsided us a bit.

      Thank you very much!

        1. example.gif
          9.06 MB
          Matt Seeley
        2. example.mov
          4.01 MB
          Matt Seeley
        3. repro.zip
          9 kB
          Matt Seeley
        For Gerrit Dashboard: QTBUG-82993
        # Subject Branch Project Status CR V

            pvarga Peter Varga
            mseeley Matt Seeley
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes