Keep HTML dropdown always on top

It worked properly when RenderWidgetHostViewQtDelegateQuickWindow had
Qt::ToolTip flag because tooltips are forced to be on top by QPA.

Force RenderWidgethostViewQtDelegateQuickWindow to stay on top by the
Qt::WindowStaysOnTopHint flag.

Fixes: QTBUG-82993
Change-Id: Iccc48d6bf3570fee09af6d713f6f0bcd56e22b9b
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>